orderReturn no basket buy

--- a/sample/INIcancel.html
+++ b/sample/INIcancel.html
@@ -40,10 +40,10 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 <form name=ini method=post action=INIcancel.php> 
 <table width="632" border="0" cellspacing="0" cellpadding="0">
   <tr> 
-    <td height="83" background="img/cancle_top.gif" style="padding:0 0 0 64">
+    <td height="83" background="../img/cancle_top.gif" style="padding:0 0 0 64">
     <table width="100%" border="0" cellspacing="0" cellpadding="0">
         <tr> 
-          <td width="3%" valign="top"><img src="img/title_01.gif" width="8" height="27" vspace="5"></td>
+          <td width="3%" valign="top"><img src="../img/title_01.gif" width="8" height="27" vspace="5"></td>
           <td width="97%" height="40" class="pl_03"><font color="#FFFFFF"><b>취소요청</b></font></td>
         </tr>
       </table></td>
@@ -67,10 +67,10 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
             <br>
             <table width="510" border="0" cellspacing="0" cellpadding="0">
               <tr> 
-                <td width="7"><img src="img/life.gif" width="7" height="30"></td>
-                <td background="img/center.gif"><img src="img/icon03.gif" width="12" height="10"> 
+                <td width="7"><img src="../img/life.gif" width="7" height="30"></td>
+                <td background="../img/center.gif"><img src="../img/icon03.gif" width="12" height="10">
                   <b>정보를 기입하신 후 확인버튼을 눌러주십시오.</b></td>
-                <td width="8"><img src="img/right.gif" width="8" height="30"></td>
+                <td width="8"><img src="../img/right.gif" width="8" height="30"></td>
               </tr>
             </table>
             <br>
@@ -78,33 +78,33 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
               <tr> 
                 <td width="510" colspan="2"  style="padding:0 0 0 23"> <table width="470" border="0" cellspacing="0" cellpadding="0">
                     <tr>
-                      <td width="18" align="center"><img src="img/icon02.gif" width="7" height="7"></td>
+                      <td width="18" align="center"><img src="../img/icon02.gif" width="7" height="7"></td>
                       <td width="" height="26">M I D : </td>
                       <td> <input type=text name=mid size=10 value="INIpayTest"></td>
                     </tr>
 
 
                     <tr>
-                      <td height="1" colspan="3" align="center"  background="img/line.gif"></td>
+                      <td height="1" colspan="3" align="center"  background="../img/line.gif"></td>
                     </tr>
                     <tr> 
-                      <td width="18" align="center"><img src="img/icon02.gif" width="7" height="7"></td>
+                      <td width="18" align="center"><img src="../img/icon02.gif" width="7" height="7"></td>
                       <td width="83" height="25">거 래 번 호</td>
                       <td width="369"> <input type=text name=tid size=40 value=""></td>
                     </tr>
                     <tr>
-                      <td height="1" colspan="3" align="center"  background="img/line.gif"></td>
+                      <td height="1" colspan="3" align="center"  background="../img/line.gif"></td>
                     </tr>
                     <tr>
-                      <td width="18" align="center"><img src="img/icon02.gif" width="7" height="7"></td>
+                      <td width="18" align="center"><img src="../img/icon02.gif" width="7" height="7"></td>
                       <td width="83" height="26">취 소 사 유</td>
                       <td width="369"><input type=text name=msg size=40 value=""></td>
                     </tr>
                     <tr> 
-                      <td height="1" colspan="3" align="center"  background="img/line.gif"></td>
+                      <td height="1" colspan="3" align="center"  background="../img/line.gif"></td>
                     </tr>
                     <tr valign="bottom"> 
-                      <td height="40" colspan="3" align="center"><input type=image src="img/button_04.gif" width="63" height="25"></td>
+                      <td height="40" colspan="3" align="center"><input type=image src="../img/button_04.gif" width="63" height="25"></td>
                     </tr>
                   </table></td>
               </tr>
@@ -115,7 +115,7 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
       </table></td>
   </tr>
   <tr>
-    <td><img src="img/bottom01.gif" width="632" height="13"></td>
+    <td><img src="../img/bottom01.gif" width="632" height="13"></td>
   </tr>
 </table>
 </form>
