--- a/sample/INIreceipt.html
+++ b/sample/INIreceipt.html
@@ -336,10 +336,10 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 <form name=ini method=post action="INIreceipt.php" onSubmit="return pay(this)"> 
 <table width="632" border="0" cellspacing="0" cellpadding="0">
   <tr> 
-    <td height="85" background="img/cash_top.gif" style="padding:0 0 0 64">
+    <td height="85" background="../img/cash_top.gif" style="padding:0 0 0 64">
       <table width="100%" border="0" cellspacing="0" cellpadding="0">
         <tr> 
-          <td width="3%" valign="top"><img src="img/title_01.gif" width="8" height="27" vspace="5"></td>
+          <td width="3%" valign="top"><img src="../img/title_01.gif" width="8" height="27" vspace="5"></td>
           <td width="97%" height="40" class="pl_03"><font color="#FFFFFF"><b>현금영수증 발행요청</b></font></td>
         </tr>
       </table></td>
@@ -356,10 +356,10 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
             <br>
             <table width="510" border="0" cellspacing="0" cellpadding="0">
               <tr> 
-                <td width="7"><img src="img/life.gif" width="7" height="30"></td>
-                <td background="img/center.gif"><img src="img/icon03.gif" width="12" height="10"> 
+                <td width="7"><img src="../img/life.gif" width="7" height="30"></td>
+                <td background="../img/center.gif"><img src="../img/icon03.gif" width="12" height="10">
                   <b>정보를 기입하신 후 발행버튼을 눌러주십시오.</b></td>
-                <td width="8"><img src="img/right.gif" width="8" height="30"></td>
+                <td width="8"><img src="../img/right.gif" width="8" height="30"></td>
               </tr>
             </table>
             <br>
@@ -367,101 +367,101 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
               <tr> 
                 <td width="510" colspan="2"  style="padding:0 0 0 23"> <table width="470" border="0" cellspacing="0" cellpadding="0">
                     <tr> 
-                      <td height="1" colspan="6" align="center"  background="img/line.gif"></td>
+                      <td height="1" colspan="6" align="center"  background="../img/line.gif"></td>
                     </tr> 
                    <tr> 
-          		<td width="18" align="center"><img src="img/icon02.gif" width="7" height="7"></td>
+          		<td width="18" align="center"><img src="../img/icon02.gif" width="7" height="7"></td>
           		<td width="109" height="26">상점아이디</td>
           		<td width="343"><input type=text name=mid size=20 maxlength=10 value="INIpayTest"></td>
         	    </tr>
                     <tr>
-                      <td height="1" colspan="3" align="center"  background="img/line.gif"></td>
+                      <td height="1" colspan="3" align="center"  background="../img/line.gif"></td>
                     </tr>
                     <tr> 
-                      <td width="18" align="center"><img src="img/icon02.gif" width="7" height="7"></td>
+                      <td width="18" align="center"><img src="../img/icon02.gif" width="7" height="7"></td>
                       <td width="177" height="26">상 품 명</td>
                       <td width="280"><input type=text name=goodname size=20 value="축구공"></td>
                     </tr>
                     <tr> 
-                      <td height="1" colspan="3" align="center"  background="img/line.gif"></td>
+                      <td height="1" colspan="3" align="center"  background="../img/line.gif"></td>
                     </tr>
                     <tr> 
-                      <td width="18" align="center"><img src="img/icon02.gif" width="7" height="7"></td>
+                      <td width="18" align="center"><img src="../img/icon02.gif" width="7" height="7"></td>
                       <td width="177" height="26">결 제 금 액</td>
                       <td width="280"><input type=text name=cr_price size=10 value="5000">&nbsp;&nbsp;
                       <font color=red><b>5000</b>원 이상만 가능합니다</font>
                       <br><font color=red>(현금결제 총금액:공급가+부가세+봉사료)</font></td>
                     </tr>
                     <tr> 
-                      <td height="1" colspan="3" align="center"  background="img/line.gif"></td>
+                      <td height="1" colspan="3" align="center"  background="../img/line.gif"></td>
                     </tr>
                     <tr> 
-                      <td width="18" align="center"><img src="img/icon02.gif" width="7" height="7"></td>
+                      <td width="18" align="center"><img src="../img/icon02.gif" width="7" height="7"></td>
                       <td width="177" height="26">공 급 가 액</td>
                       <td width="280"><input type=text name=sup_price size=10 value="4000"></td>
                     </tr>
                     <tr> 
-                      <td height="1" colspan="3" align="center"  background="img/line.gif"></td>
+                      <td height="1" colspan="3" align="center"  background="../img/line.gif"></td>
                     </tr>
                     <tr> 
-                      <td width="18" align="center"><img src="img/icon02.gif" width="7" height="7"></td>
+                      <td width="18" align="center"><img src="../img/icon02.gif" width="7" height="7"></td>
                       <td width="177" height="26">부 가 세</td>
                       <td width="280"><input type=text name=tax size=10 value="900"></td>
                     </tr>
                     <tr> 
-                      <td height="1" colspan="3" align="center"  background="img/line.gif"></td>
+                      <td height="1" colspan="3" align="center"  background="../img/line.gif"></td>
                     </tr>
                     <tr> 
-                      <td width="18" align="center"><img src="img/icon02.gif" width="7" height="7"></td>
+                      <td width="18" align="center"><img src="../img/icon02.gif" width="7" height="7"></td>
                       <td width="177" height="26">봉 사 료</td>
                       <td width="280"><input type=text name=srvc_price size=10 value="100"></td>
                     </tr>                    
                     <tr> 
-                      <td height="1" colspan="3" align="center"  background="img/line.gif"></td>
+                      <td height="1" colspan="3" align="center"  background="../img/line.gif"></td>
                     </tr>
                     <tr> 
-                      <td width="18" align="center"><img src="img/icon02.gif" width="7" height="7"></td>
+                      <td width="18" align="center"><img src="../img/icon02.gif" width="7" height="7"></td>
                       <td width="109" height="25">구 매 자 명</td>
                       <td width="343"><input type=text name=buyername size=20 value="홍길동"></td>
                     </tr>
                     <tr> 
-                      <td height="1" colspan="3" align="center"  background="img/line.gif"></td>
+                      <td height="1" colspan="3" align="center"  background="../img/line.gif"></td>
                     </tr>
                     <tr> 
-                      <td width="18" align="center"><img src="img/icon02.gif" width="7" height="7"></td>
+                      <td width="18" align="center"><img src="../img/icon02.gif" width="7" height="7"></td>
                       <td width="109" height="25">전 자 우 편</td>
                       <td width="343"><input type=text name=buyeremail size=20 value="test@test.com"></td>
                     </tr>
                     <tr> 
-                      <td height="1" colspan="3" align="center"  background="img/line.gif"></td>
+                      <td height="1" colspan="3" align="center"  background="../img/line.gif"></td>
                     </tr>
                     <tr> 
-                      <td width="18" align="center"><img src="img/icon02.gif" width="7" height="7"></td>
+                      <td width="18" align="center"><img src="../img/icon02.gif" width="7" height="7"></td>
                       <td width="109" height="25">이 동 전 화</td>
                       <td width="343"><input type=text name=buyertel size=20 value="011-123-1234"></td>
                     </tr>
                     <tr> 
-                      <td height="1" colspan="3" align="center"  background="img/line.gif"></td>
+                      <td height="1" colspan="3" align="center"  background="../img/line.gif"></td>
                     </tr>
                     <tr> 
-                      <td width="18" align="center"><img src="img/icon02.gif" width="7" height="7"></td>
+                      <td width="18" align="center"><img src="../img/icon02.gif" width="7" height="7"></td>
                       <td width="109" height="25">주민등록번호<br>(사업자등록번호)</td>
                       <td width="343"><input type=text name=reg_num size=13 maxlength=13 value="2208155597">&nbsp;&nbsp;&nbsp;<font color=red>"-"를 뺀 숫자만 입력하세요</font></td>
                     </tr>
                     <tr> 
-                      <td height="1" colspan="3" align="center"  background="img/line.gif"></td>
+                      <td height="1" colspan="3" align="center"  background="../img/line.gif"></td>
                     </tr>
 		     <tr>
-                      <td width="18" align="center"><img src="img/icon02.gif" width="7" height="7"></td>
+                      <td width="18" align="center"><img src="../img/icon02.gif" width="7" height="7"></td>
                       <td width="109" height="25">서브몰사업자번호</td>
                       <td width="343"><input type=text name=companynumber size=13 maxlength=10 value="">&nbsp;&nbsp;&nbsp;<font color=red>"-"를 뺀 숫자만
  입력하세요</font></td>
                     </tr>
                     <tr>
-                      <td height="1" colspan="3" align="center"  background="img/line.gif"></td>
+                      <td height="1" colspan="3" align="center"  background="../img/line.gif"></td>
                     </tr>                    
                     <tr>
-                      <td width="18" align="center"><img src="img/icon02.gif" width="7" height="7"></td>
+                      <td width="18" align="center"><img src="../img/icon02.gif" width="7" height="7"></td>
                       <td colspan=2>
                     	 <table width=100% cellspacing=0 cellpadding=0 border=0>
                     	   <tr>
@@ -486,10 +486,10 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
                       </td>
                     </tr>
                     <tr> 
-                      <td height="1" colspan="3" align="center"  background="img/line.gif"></td>
+                      <td height="1" colspan="3" align="center"  background="../img/line.gif"></td>
                     </tr>
                     <tr valign="bottom"> 
-                      <td height="40" colspan="3" align="center"><input type=image src="img/button_08.gif" width="63" height="25"></td>
+                      <td height="40" colspan="3" align="center"><input type=image src="../img/button_08.gif" width="63" height="25"></td>
                     </tr>
                     <tr valign="bottom">
                       <td height="45" colspan="3">전자우편과 이동전화번호를 입력받는 것은 고객님의 결제성공 내역을 E-MAIL 또는 SMS 로
@@ -504,7 +504,7 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
       </table></td>
   </tr>
   <tr> 
-    <td><img src="img/bottom01.gif" width="632" height="13"></td>
+    <td><img src="../img/bottom01.gif" width="632" height="13"></td>
   </tr>
 </table>
 </center>
